<resources>
    <string name="app_name">Launcher</string>
    <string name="progress_bar_text">Please wait while your icons are being prepared</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="settings">Settings</string>
    <string name="sortby">Sort Applications</string>
    <string name="sortbydesc">Select criteria by which your mApps will be sorted</string>
    <string name="change_icon">apply</string>
    <string name="rotate_image">rotate</string>
    <string name="set_web_icon">Set Web Icon</string>
    <string name="reset_icon">Reset Icons</string>
    <string name="toolbar_reset_icons">Set Default Icons</string>
    <string name="reset_icon_desc">Reset previously set icons to their default values</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="select_visible_apps">Visible Apps</string>
    <string name="select_visible_apps_desc">Select which applications will be shown in the application list</string>
    <string name="show_apps_names">Show Labels</string>
    <string name="show_apps_names_desc">Choose whether names of applicaitons will be displayed under their icons</string>
    <string name="no_of_columns">Number of Columns</string>
    <string name="no_of_columns_desc">Pick number of applications displayed per line</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="change_wallpaper_desc">Select an image to be set as a wallpaper</string>
    <string name="set_icons">Set Icons using Gallery</string>
    <string name="set_icons_desc">Change icons of applications by using your own images</string>
    <string name="set_icons_web">Set Icons using Online Web</string>
    <string name="set_icons_desc_web">Change icons of applications using online icons</string>
    <string name="toolbar_select_apps">Select Visible Apps</string>
    <string name="toolbar_set_icons">Set Apps Icons</string>
    <string name="set_solid_color_wallpaper">Set Wallpaper as a solid color</string>
    <string name="set_solid_color_wallpaper_desc">Pick a color to be used as your wallpaper</string>
    <string name="uninstall">Uninstall</string>
    <string name="cancel">Cancel</string>
    <string name="enable_safe_mode">Enable Safe Mode</string>
    <string name="enable_safe_mode_desc">Disable access to Settings, pull-down menu and (un)installing apps (Passphrase protected)</string>
    <string name="disable_safe_mode">Disable Safe Mode</string>
    <string name="disable_safe_mode_desc">Enable access to Settings, pull-down menu and (un)installing apps (Passphrase protected)</string>
    <string name="rgb_red">RED:</string>
    <string name="rgb_green">GREEN:</string>
    <string name="rgb_blue">BLUE:</string>
    <string name="rgb_alpha">ALPHA:</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="sort_values">
        <item>by name</item>
        <item>most used</item>
    </string-array>
    <string-array name="no_of_cols">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
