<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:theme="@style/Theme.AppCompat"
    android:id="@+id/color_pick_container"
    tools:context=".ColorPickActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/color_pick_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:titleTextColor="#C5CAE9"
        android:title="@string/settings" />
    <RelativeLayout
        android:id="@+id/color_picker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/red_rgb_values"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#303F9F"
            android:padding="12dp"
            android:text="@string/rgb_red"/>
        <SeekBar
            android:id="@+id/rSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/red_rgb_values"
            android:padding="12dp"
            android:max="255"/>
        <TextView
            android:id="@+id/green_rgb_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rSeekBar"
            android:textSize="14sp"
            android:textColor="#303F9F"
            android:padding="12dp"
            android:text="@string/rgb_green"/>
        <SeekBar
            android:id="@+id/gSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/green_rgb_values"
            android:padding="12dp"
            android:max="255"/>
        <TextView
            android:id="@+id/blue_rgb_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gSeekBar"
            android:textSize="14sp"
            android:textColor="#303F9F"
            android:padding="12dp"
            android:text="@string/rgb_blue"/>
        <SeekBar
            android:id="@+id/bSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/blue_rgb_values"
            android:padding="12dp"
            android:max="255"/>
        <TextView
            android:id="@+id/alpha_rgb_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bSeekBar"
            android:textSize="14sp"
            android:textColor="#303F9F"
            android:padding="12dp"
            android:text="@string/rgb_alpha"/>
        <SeekBar
            android:id="@+id/aSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/alpha_rgb_values"
            android:padding="12dp"
            android:max="255"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/picked_color"
            android:layout_margin="24dp"
            android:layout_below="@+id/aSeekBar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            android:layout_height="40dp"
            android:text="Set Wallpaper"
            android:layout_below="@+id/picked_color"
            android:onClick="setSolidWallpaperColor"/>
    </RelativeLayout>

</RelativeLayout>
