<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:theme="@style/Theme.AppCompat"
    android:id="@+id/settings_container"
    tools:context=".SettingsActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A237E"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:titleTextColor="#C5CAE9"
        android:title="@string/settings" />

    <TextView
        android:id="@+id/sort_by_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#1A237E"
        android:text="@string/sortby" />

    <Spinner
        android:id="@+id/sort_by_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/div1"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:background="#ffffff"
        android:drawSelectorOnTop="true"
        android:dropDownWidth="wrap_content"
        android:entries="@array/sort_values"
        android:padding="12dp"
        android:popupBackground="#ffffff"
        android:textAlignment="textEnd"
        android:textColor="#1A237E"
        android:textSize="16sp" />
    <View style="@style/Divider"
        android:id="@+id/div1"
        android:layout_below="@+id/sort_by_text_view"/>
    <TextView
        android:id="@+id/show_visible_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/div1"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#1A237E"
        android:text="@string/select_visible_apps"
        android:onClick="selectVisibleApps"/>
    <View style="@style/Divider"
        android:id="@+id/div2"
        android:layout_below="@+id/show_visible_apps"/>
    <TextView
        android:id="@+id/show_app_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/div2"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#1A237E"
        android:text="@string/show_app_names"
        android:onClick="selectVisibleApps"/>
    <CheckBox
        android:id="@+id/show_names_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_alignBaseline="@+id/show_app_names"
        android:layout_alignBottom="@+id/show_app_names"
        android:layout_alignEnd="@+id/div2"
        android:theme="@style/MyCheckBox"/>
    <View style="@style/Divider"
        android:id="@+id/div3"
        android:layout_below="@+id/show_app_names"/>

    <TextView
        android:id="@+id/no_of_columns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/div3"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#1A237E"
        android:text="@string/no_of_columns" />

    <Spinner
        android:id="@+id/no_of_apps_per_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/div4"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:background="#ffffff"
        android:drawSelectorOnTop="true"
        android:dropDownWidth="wrap_content"
        android:entries="@array/no_of_cols"
        android:padding="12dp"
        android:popupBackground="#ffffff"
        android:textAlignment="textEnd"
        android:textColor="#1A237E"
        android:textSize="16sp" />
    <View style="@style/Divider"
        android:id="@+id/div4"
        android:layout_below="@+id/no_of_columns"/>
    <TextView
        android:id="@+id/set_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/div4"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#1A237E"
        android:text="@string/change_wallpaper"
        android:onClick="changeWallpaper"/>
    <View style="@style/Divider"
        android:id="@+id/div5"
        android:layout_below="@+id/set_wallpaper"/>
</RelativeLayout>